css/index.css
/* ... */
/* ===== NAVBAR STYLES ======= */
nav {
  padding: 1.25rem 0;
  background: var(--cir-text-white);
  border-bottom: none;
}

.nav-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-logo {
  display: flex;
  align-items: center;
}

.nav-logo-img {
  width: 106px;
  height: auto;
}

.links-container {
  display: none;
}

.toggle-button {
  border-radius: 6px;
  font-size: 18px;
  display: flex;
  padding: 8px 10px;
  border: none;
  outline: none;
  cursor: pointer;
  align-items: center;
  justify-content: center;
  color: var(--cir-text-white);
  background-color: var(--cir-primary-2);
}

/* The side navigation menu */
.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: var(--cir-primary-2);
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 80px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
  padding: 8px 8px 16px 32px;
  text-decoration: none;
  font-size: 20px;
  color: var(--cir-text-white);
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}

@media screen and (min-width: 992px) {
  nav {
    padding: 2rem 0 0 0;
  }

  .nav-logo-img {
    width: 126px;
    height: auto;
  }

  .nav-logo-img {
    width: 150px;
    height: auto;
  }

  .links,
  .links-container,
  .nav-bar-button {
    display: flex;
    align-items: center;
  }

  .links-container {
    justify-content: flex-end;
  }

  .links {
    gap: 2rem;
    margin-right: 2.5rem;
  }

  .link {
    cursor: pointer;
  }

  .nav-button {
    display: flex;
    align-items: center;
    padding: 8px 22px;
    padding-top: 12px;
    border-radius: 5px;
    border: none;
    cursor: pointer;
    color: var(--cir-text-white);
    transition: var(--transition);
    box-shadow: var(--btn-shadow);
    background: var(--cir-btn);
  }
  .nav-button:hover {
    background: var(--clr-btn-hover);
  }

  .toggle-button {
    display: none;
  }
}

/* ===== HERO STYLES ======= */
.hero {
  padding-top: 15px;
  background: var(--cir-text-white);
}

.hero-flex {
  display: grid;
  gap: 2rem;
  justify-content: center;
  justify-content: start;
  grid-template-columns: 1fr;
}

.hero-image {
  object-fit: contain;
  width: 100%;
  height: auto;
}

.hero-text-container {
  padding-top: 20px;
}

.hero-text-container h3 {
  margin-bottom: 2.5rem;
  text-align: center;
  text-transform: capitalize;
}

.hero-text-container button {
  margin-left: auto;
  margin-right: auto;
}

.hero-img-container {
  padding-top: 3rem;
}

@media screen and (min-width: 992px) {
  .hero {
    padding-top: 60px;
    justify-content: flex-start;
    background: var(--cir-text-white);
  }

  .hero-flex {
    grid-template-columns: 1fr 1fr;
  }
  .hero-img-container {
    padding-top: 2rem;
  }

  .hero-text-container h3 {
    margin-bottom: 4rem;
    text-transform: uppercase;
  }

  .hero-text-container {
    padding-top: 60px;
  }

  .hero-text-container button {
    margin-right: 0px;
    margin-left: 0px;
  }

  .hero-text-container h3 {
    text-align: left;
  }
}

/* ===== ABOUT STYLES ======= */
.about {
  background-color: var(--cir-primary-2);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.about-flex {
  display: flex;
  justify-content: center;
  padding-top: 50px;
}

.about-text h2,
h6 {
  text-align: center;
  color: var(--cir-text-white);
}

.about-text h6 {
  margin-top: 32px;
  font-weight: 400;
}

.about-text p {
  font-weight: 300;
  text-align: center;
  color: var(--cir-text-white);
}

.about-btn-container {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  margin-top: 4rem;
}
.about-btn-container button {
  background: none;
  border: none;
  margin-top: 2px;
  color: var(--cir-text-white);
  cursor: pointer;
}
.about-btn-container .help-icon {
  color: var(--cir-text-white);
}

.about-company-btn-container {
  display: flex;
  gap: 1rem;
  align-items: center;
  margin-top: 2rem;
  justify-content: center;
}
.about-company-btn-container button {
  background: none;
  border: none;
  margin-top: 2px;
  color: var(--cir-text-primary);
}
.about-company-btn-container .help-icon {
  color: var(--cir-text-primary);
}

.about-footer {
  position: relative;
  background: var(--cir-text-white);
}

.about-card h4 {
  font-weight: 400;
  margin-bottom: 32px;
  text-align: center;
}

.about-card p {
  font-weight: 300;
  text-align: center;
}

.about-me-text {
  color: var(--cir-text-primary);
}

.about-company-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.about-company-img {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.about-footer-flex {
  display: flex;
  flex-direction: column-reverse;
}
/* ... */

